--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=uts-database.cfkwyggcwrsl.ap-southeast-1.rds.amazonaws.com
 DB_PORT=5432
-DB_USER=uts-admin
+DB_USER=uts_admin
 DB_PASSWORD=Darussalam09
 DB_NAME=postgres
 AWS_BUCKET=uts-bucket
-AWS_REGION=ap-southeast-1
+AWS_REGION=ap-southeast-1a
