--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,10 @@ jobs:
 
     - name: Deploy to ECS
       run: |
-        ssh -o StrictHostKeyChecking=no ec2-user@18.141.12.50 << 'EOF'
-          cd /var/www/uts-cloud
+        ssh -o StrictHostKeyChecking=no ec2-user@54.169.84.29 << 'EOF'
+          cd /var/www/uts-backend
           sudo git pull origin main
-          # Restart Nginx or any service needed
-          sudo systemctl restart nginx
+          node app.js
         EOF
       env: 
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
